--- a/templates/base.html
+++ b/templates/base.html
@@ -57,10 +57,7 @@
                     <a href={{ "./dashboard"}}>Home</a>
                 </li>
                 <li>
-                    <a href={{ "./vehicles"}}>Vehicle Logs</a>
-                </li>
-                <li>
-                    <a href={{ "./reports"}}>Reports</a>
+                    <a href={{ "./user-reports"}}>Reports</a>
                 </li>
                 <li>
                     <a href={{ "./users"}}>Account</a>
