--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -1,79 +1,48 @@
-{% extends "base.html" %}
-{% block title %}Account{% endblock %}
-{% block head %}
-    {{ super() }}
-{% endblock %}
-{% block body %}
+{% extends "base.html" %} {% block title %}Account{% endblock %} {% block head %} {{ super() }} {% endblock %} {% block body %} {% block header %} {{ super() }} {% endblock %} {% block navigation %} {{ super() }}
+<!--Enter navigation markup-->
+{% endblock %} {% block main_content %}
 
-    {% block header %}
-        {{ super() }}
-    {% endblock %}
-
-    {% block navigation %}
-        {{ super() }}
-        <!--Enter navigation markup-->
-    {% endblock %}
-
-
-    {% block main_content %}
-        
-    <div class="account-container">
-        <div class="account-row">
-            <div class="user-aside">
-                <div class="user-aside-row">
-                    <div class="user-avatar-container">
-                        <i class="fas fa-user-alt user-avatar"></i>
-                        <span class="admin-title">Adminstrator</span>
-                    </div>
-                    <div class="username account-control-container">
-                        <i class="fas fa-user-circle account-icon"></i>
-                        <input type="text" class="account-input-control" value="Username" name="username-input"/>
-                        
-                    </div>
-                    <div class="user-phone account-control-container">
-                        <i class="fas fa-eye account-icon"></i>
-                        <input type="password" class="account-input-control" value="*********" name="password-input"/>
-                        
-                    </div>
-                    <div class="user-password account-control-container">
-                        <i class="fas fa-phone-alt account-icon"></i>
-                        <input type="text" class="account-input-control" value="0778275503" name="phone-input"/>
-                        
-                    </div>
-                    <div class="account-action-buttons">
-                        <button class="submit-button edit-button"><i class="fas fa-edit"></i></button>
-                        <button class=" delete-button submit-button"><i class="fas fa-save"></i></button>
-                    </div>
-                </div> 
+<div class="account-container">
+    <div class="account-row">
+        <div class="user-aside">
+            <div class="new-user-header">
+                <span class="new-user-title">Add New User</span>
+                <p class="new-user-text">For a newly created user, a password is randomly generated and sent to them via a text message together with other account details</p>
             </div>
             <div class="account-main-container">
-                <div class="account-tabs-container">
-                    <div class="account-tabs-row">
-                        <div class="account-tab">
-                            <span class="tab-title">Users</span>
-                            <span class="tab-count">5</span>
-                        </div>
-                        <div class="account-tab">
-                            <span class="tab-title">Vehicles</span>
-                            <span class="tab-count">3</span>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="account-lists-area">
                     <div class="lists-area-row">
-                        <div class="user-form">
-                            <h1 class="add-user-title">Add a new user</h1>
-                            <p class="add-user-messages">Enter the username and phone number of the user and their login credentials will be sent to them via text.</p>
+                        <div class="add-user-area">
+                            <div class="add-user-form">
+                                <form action="/add-user" method="POST" class="user-form">
+                                    {{ form.csrf_token }}
+                                    <div class="username-container input-container">
+                                        <div class="label-wrapper"><label for="username" class="input-label">Username</label></div>
+                                        <input name="username" id="username" class="input-item" type="text"> {% if username_error %}
+                                        <div class="label-wrapper"><span class="validation-error_message">{{ username_error }}</span></div>
+                                        {% endif%}
+                                    </div>
+                                    <div class="username-container input-container">
+                                        <div class="label-wrapper"><label for="username" class="input-label">Phone</label></div>
+                                        <input name="phone" id="phone" class="input-item" type="text"> {% if phone_error %}
+                                        <div class="label-wrapper"><span class="validation-error_message">{{ phone_error }}</span></div>
+                                        {% endif%}
+                                    </div>
+                                    <div class="input-container">
+                                        <input type="checkbox" id="admin-check" name="admin-check" value="admin">
+                                        <label for="admin-check">Admin?</label>
+                                    </div>
+                                    <div class="buttons-container user-form-buttons">
+                                        <input class="login-button submit-button" type="submit" value="Submit">
+                                        <input class="clear-button submit-button" type="button" value="Cancel">
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    {% endblock %}
-
-    {% block footer %}
-        {{ super() }}
-    {% endblock %}
-
-{% endblock %}
+    {% endblock %} {% block footer %} {{ super() }} {% endblock %} {% endblock %}
