Connected the dashboard to db

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -791,9 +791,9 @@ p {
     display: flex;
     display: grid;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     gap: 10rem;
-    max-width: 650px;
+    max-width: 1000px;
     padding: .875rem .5rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
     grid-template-columns: 1fr 6fr;
@@ -807,11 +807,17 @@ p {
     justify-content: flex-start;
 }
 
-.name-and-edit-container,
-.entities-container {
+.name-and-edit-container {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     gap: .875rem;
+}
+
+.entities-container {
+    display: grid;
+    grid-template-rows: 1;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
 }
 
 .entities-container>a {
@@ -964,6 +970,13 @@ p {
 .account-list-item {
     margin: .5rem .25rem;
     box-shadow: rgb(0 0 0 / 10%) 0px 0px 5px 0px, rgb(0 0 0 / 10%) 0px 0px 1px 0px;
+}
+
+.vehicle-search-area {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    width: 450px;
 }
 
 
