--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -24,7 +24,7 @@
                                         {% endif%}
                                     </div>
                                     <div class="username-container input-container">
-                                        <div class="label-wrapper"><label for="username" class="input-label">Phone</label></div>
+                                        <div class="label-wrapper"><label for="phone" class="input-label">Phone</label></div>
                                         <input name="phone" id="phone" class="input-item" type="text"> {% if phone_error %}
                                         <div class="label-wrapper"><span class="validation-error_message">{{ phone_error }}</span></div>
                                         {% endif%}
